1999-03-24  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c: Change enum constants ADD and DELETE to something less
	likely to run into conflicts.

1999-03-21  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (tagf): New test, tests for moving a branch tag to a
	non-branch tag and trying to recover.

1999-03-12  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (branches): Tweak test branches-5 to test the case in
	which one modifies a file and then branches it.

1999-03-09  John Bley of duke.edu

	* mkmodules.c (filelist): Missed a NULL in this struct (should
	have 3 members, only had 2).

1999-03-07  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (Index): Rename new test from rm_CVS/Root to rmroot
	(we don't have a formal rule about funky punctuation in test names
	but both underscore and a slash is too funky for me :-)).
	Reindent a few tests which were off.

	* root.c: Remove the sentence which had the improper English;
	there isn't really a need for that sentence and it isn't
	particularly accurate any more.

1999-02-27  Derek Price
	<http://www-personal.engin.umich.edu/~oberon/resume.html>

	* sanity.sh:  Added rm_CVS/Root test to test that CVS uses
	$CVSROOT rather than dumping core when running remotely and
	the admin file CVS/Root is deleted from the workspace.

	Also, altered a few 'cvs commit' 's in regular expressions to
	fit the .${PROG} commit. portability syntax.
	
	* recurse.c:  Stopped CVS from dumping core in the case tested
	above.

	* root.c:  Fixed somebody's improper english.

1999-02-25  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (keyword2-12): Use ${QUESTION} instead of ? in the
	expected result.

1999-02-24  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (keyword2): Restore the original \\\$ instead of $.
	The latter ends up working due to various kludgy semantics in the
	shell and regular expressions, but the former is cleaner.

	* sanity.sh (keyword2): Protect keywords against accidental